# Dorsa

./: .gitmodules  CMakeLists.txt  README.md  main.c
Core/: CMakeLists.txt  Dorsa.c  Dorsa.h
Core/Color/: Color.c  Color.h  ColorFormat.h  ColorRGBA8888.h
Core/Geometry/: Size2DUInt16.h
Core/Graphics/: Graphics.h
Core/Pixel/: PixelFormat.c  PixelFormat.h  PixelRGB565.h
Core/Platform/: Platform.h
SandBox/: CMakeLists.txt  SandBox.c
